# meeting-assistant-env

./: README.md  client.py  demo_notebook.ipynb  dockerfile.txt  models.py  pyproject.toml
server/: app.py  dockerfile  meeting_environment.py  requirements.txt
